# milim

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  design-qa.md
.github/workflows/: ci.yml  release.yml  site.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/public/: preview-control-overlay.html  preview-control-overlay.js
apps/desktop/scripts/: generate-release-manifest.mjs  merge-release-manifests.mjs  package-release.mjs  release-manifest-utils.mjs  smoke-release-binary.mjs  stage-portable-release-artifact.mjs  validate-release-tag.mjs  verify-release-manifest.mjs  verify-release-workflow.mjs
apps/desktop/src/: App.tsx  api.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: computer_tools.rs  diagnostics.rs  host_tools.rs  lib.rs  main.rs  preview_tools.rs  preview_webview.rs
apps/desktop/src/agents/: store.ts
apps/desktop/src/components/: AgentAvatar.tsx  AgentsManager.css  AgentsManager.tsx  ArtifactList.tsx  AssistantMessage.tsx  AutoUpdater.tsx  ChatSearchPopover.tsx  ChatView.tsx  CodeBlock.tsx  Composer.tsx  ComposerSurface.tsx  ContextMenu.tsx  ControlBar.tsx  GeneratedMedia.css  GeneratedMedia.tsx  GitPanel.tsx  GoalPanel.tsx  HotSwapDialogs.tsx  InlineMediaControls.tsx  Logo.tsx  Markdown.tsx  McpAppView.tsx  McpManager.css  McpManager.tsx  MediaManager.tsx  MemoryManager.css  MemoryManager.tsx  MobileCompanionSettings.tsx  ModelPicker.tsx  OnboardingFlow.tsx  PreviewPanel.tsx  ProvidersManager.css  ProvidersManager.tsx  QuickSummaryPanel.tsx  ResizeHandles.tsx  RunJournalManager.css  RunJournalManager.tsx  RunTimeline.tsx  SchedulesManager.css  SchedulesManager.tsx  (+12 more)
apps/desktop/src/lib/: artifactPreview.ts  artifactRevisions.ts  artifactVisibility.ts  artifacts.ts  attachmentInput.ts  attachmentWire.ts  chatInstructions.ts  chatSearch.ts  codexRecovery.ts  commandPalette.ts  composerAutocomplete.ts  composerHistory.ts  composerTokens.ts  contextCompaction.ts  contextMenu.ts  emptyStarterSuggestions.ts  gitCommitMessageModels.ts  gitDiffRows.ts  gitRefresh.ts  goals.ts  hotSwap.ts  mcpApps.ts  media.ts  messageIds.ts  modelPicker.ts  perf.ts  previewActivity.ts  previewRuntimeKeys.ts  previewWebview.ts  quickSummary.ts  reasoningEffort.ts  recentThreads.ts  recordWav.ts  requestBody.ts  scroll.ts  sessionRecency.ts  skills.ts  streamParts.ts  threadExport.ts  threadTitles.ts  (+11 more)
apps/desktop/src/onboarding/: store.ts
apps/desktop/tests/: agent-avatar.test.tsx  agent-schedule-models.test.mjs  api-model-discovery.test.mjs  api-model-startup.test.mjs  api-models.test.mjs  artifact-visibility.test.ts  artifacts.test.ts  assistant-stream-grouping.test.ts  assistant-stream-summary.test.ts  attachment-input.test.ts  attachment-wire.test.ts  brand-cleanup.test.mjs  chat-scroll.test.ts  chat-search.test.ts  codex-runtime-rendering.test.tsx  codex-runtime.test.ts  command-palette.test.ts  composer-autocomplete.test.ts  composer-history.test.ts  composer-tokens.test.ts  context-compaction.test.ts  context-menu.test.ts  copy-lint.test.mjs  empty-starter-suggestions.test.ts  generated-media-rendering.test.tsx  git-commit-message-models.test.ts  git-diff-renderer.test.ts  git-refresh.test.ts  hot-swap.test.ts  inspector-controller.test.mjs  interface-sounds.test.ts  markdown-rendering.test.tsx  mcp-apps.test.ts  model-picker-rendering.test.tsx  model-picker.test.ts  onboarding-store.test.ts  preview-activity.test.ts  preview-panel-rendering.test.tsx  preview-runtime-keys.test.ts  quick-summary.test.ts  (+37 more)
apps/site/: README.md  index.html  package.json  pnpm-lock.yaml  wrangler.jsonc
apps/site/public/: _redirects  robots.txt  sitemap.xml
apps/site/scripts/: check-copy.mjs  prerender-docs.mjs
apps/site/src/: App.tsx  DocsPage.tsx  HeroAsciiField.tsx  ShaderField.tsx  SiteMobileNav.tsx  ThemeControl.tsx  main.tsx  styles.css
crates/milim-agents/: Cargo.toml
crates/milim-agents/src/: lib.rs  store.rs  threads.rs
crates/milim-automation/: Cargo.toml
crates/milim-automation/src/: lib.rs
crates/milim-cli/: Cargo.toml
crates/milim-cli/src/: main.rs
crates/milim-core/: Cargo.toml
crates/milim-core/src/: config.rs  error.rs  lib.rs  paths.rs  proc.rs
crates/milim-core/src/api/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/milim-identity/: Cargo.toml
crates/milim-identity/src/: access_key.rs  crypto.rs  lib.rs  local.rs
crates/milim-inference/: Cargo.toml
crates/milim-inference/src/: anthropic.rs  gemini.rs  image_input.rs  lib.rs  remote.rs  service.rs  test_backend.rs  unavailable.rs
crates/milim-inference/tests/: anthropic.rs  gemini.rs
crates/milim-inference/tests/fixtures/: geometric-png.base64
crates/milim-mcp-client/: Cargo.toml
crates/milim-mcp-client/src/: lib.rs
crates/milim-mcp-client/tests/fixtures/: apps_server.js
crates/milim-memory/: Cargo.toml
crates/milim-memory/src/: lib.rs
crates/milim-privacy/: Cargo.toml
crates/milim-privacy/src/: lib.rs
crates/milim-sandbox/: Cargo.toml
crates/milim-sandbox/src/: lib.rs
crates/milim-server/: Cargo.toml
crates/milim-server/src/: auth.rs  claude_bridge.rs  codex_bridge.rs  companion.rs  error.rs  lib.rs  mcp_bridge.rs  media_library.rs  opencode_bridge.rs  preview_runtime.rs  privacy.rs  providers.rs  routes.rs  sse.rs  state.rs  threads.rs  translate.rs  workspace_context.rs
crates/milim-server/tests/: http.rs
crates/milim-skills/: Cargo.toml
crates/milim-skills/src/: lib.rs
crates/milim-storage/: Cargo.toml
crates/milim-storage/src/: crypto.rs  db.rs  lib.rs
crates/milim-tools/: Cargo.toml
crates/milim-tools/src/: builtins.rs  fs.rs  lib.rs
crates/milim-voice/: Cargo.toml
crates/milim-voice/src/: lib.rs
docs/: README.md  account-runtimes.md
docs/wiki/: agents.md  api.md  config.md  desktop.md  memory.md  models.md  overview.md  privacy.md  quickstart.md  release.md  troubleshooting.md  voice-media-mobile.md
(+19 files in other folders)
