[package]
name = "milim-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The tool-use agent loop (model <-> tools)."

[dependencies]
milim-core.workspace = true
milim-inference.workspace = true
milim-tools.workspace = true
milim-storage.workspace = true
rusqlite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
milim-inference = { workspace = true, features = ["test-backend"] }
