[package]
name = "milim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The `milim` command-line interface."

[[bin]]
name = "milim"
path = "src/main.rs"

[dependencies]
milim-core.workspace = true
milim-inference.workspace = true
milim-server.workspace = true
milim-tools.workspace = true
milim-memory.workspace = true
milim-storage.workspace = true
milim-agents.workspace = true
milim-skills.workspace = true
milim-automation.workspace = true
milim-identity.workspace = true
tokio.workspace = true
clap.workspace = true
reqwest.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
