[package]
name = "milim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types, config, paths, and API DTOs for milim."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
directories.workspace = true

[dev-dependencies]
serde_json.workspace = true
