[package]
name = "milim-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "secp256k1 identity + msk-v1 access keys (milim-interoperable)."

[dependencies]
milim-core.workspace = true
k256.workspace = true
sha3.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
