[package]
name = "milim-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Backend-neutral inference abstraction (ModelService) and backends."

[features]
default = []
test-backend = []

[dependencies]
milim-core.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
bytes.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true }
