[package]
name = "milim-privacy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Privacy filter: regex PII detection + reversible redaction."

[dependencies]
regex.workspace = true
serde.workspace = true
