[package]
name = "milim-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Cross-platform agent sandbox (Docker), replacing Apple Containerization."

[dependencies]
milim-core.workspace = true
tokio.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true }
