[package]
name = "milim-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Skills (SKILL.md capabilities) store and selection."

[dependencies]
milim-core.workspace = true
milim-storage.workspace = true
rusqlite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
