[package]
name = "milim-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SQLite persistence + at-rest AES-GCM encryption for milim."

[dependencies]
milim-core.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
rand.workspace = true
