[package]
name = "milim-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Speech transcription abstractions for milim."

[features]
default = []
whisper = ["dep:whisper-rs"]
native-vad = ["dep:ort"]
native-tts = ["dep:ort"]
native-tts-espeak = ["native-tts", "dep:espeak-ng"]

[dependencies]
milim-core.workspace = true
async-trait.workspace = true
hound.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
serde.workspace = true
ort = { workspace = true, optional = true }
espeak-ng = { workspace = true, optional = true }
whisper-rs = { version = "0.16", optional = true }
